// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children when passed in successfully 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  position: relative;
  width: 100%;
  height: 0;
  padding: ",
          [Function],
          "% ",
          "1.8rem",
          " 0;
  margin: 0 auto ",
          "1.8rem",
          ";
",
        ],
      },
      "defaultProps": Object {
        "heightOverWidth": 0.5625,
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "heightOverWidth": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  heightOverWidth={0.5625}
>
  <p>
    Hello World
  </p>
</StyledComponent>
`;

exports[`renders props when passed in 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  position: relative;
  width: 100%;
  height: 0;
  padding: ",
          [Function],
          "% ",
          "1.8rem",
          " 0;
  margin: 0 auto ",
          "1.8rem",
          ";
",
        ],
      },
      "defaultProps": Object {
        "heightOverWidth": 0.5625,
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "heightOverWidth": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  heightOverWidth={0.75}
/>
`;

exports[`renders successfully 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  position: relative;
  width: 100%;
  height: 0;
  padding: ",
          [Function],
          "% ",
          "1.8rem",
          " 0;
  margin: 0 auto ",
          "1.8rem",
          ";
",
        ],
      },
      "defaultProps": Object {
        "heightOverWidth": 0.5625,
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "heightOverWidth": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  heightOverWidth={0.5625}
/>
`;
